[project]
name = "sklearn-autoresearch"
version = "0.1.0"
description = "Autonomous ML experimentation with sklearn — inspired by karpathy/autoresearch"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "scikit-learn>=1.5",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
